<resources>
    <string name="app_name">BonsaiCare</string>

    <string name="schedule">Schedule</string>
    <string name="manage">Manage</string>
    <string name="setting">Setting</string>

    <!--    schedule-->
    <string name="titleScheduleItemTitle">Bonsai Detail</string>
    <string name="titleNewScheduleTitle">Create New Schedule</string>

    <!--    manage tab-->
    <!--    titile-->
    <string name="titleBonsai">Bonsai Manage</string>
    <string name="titlePlacement">Place Manage</string>

    <string name="bonsaiDetailTitle">Bonsai Detail</string>
    <string name="titlePlacementDetail">Place Detail</string>
    <string name="titleSupplyDetail">Supply Detail</string>

    <string name="titleSupplies">Supply Manage</string>
    <string name="titleReport">Report Details</string>
    <string name="addNewBonsai">Add New Bonsai</string>
    <string name="addNewPlace">Add New Place</string>
    <string name="addNewSupply">Add New Supply</string>
    <!--    detail-->
    <string name="detailBonsai">Show the bonsais that you have.</string>
    <string name="detailPlacement">Show the placements that you have.</string>
    <string name="detailSupplies">Show the supplyName that you have.</string>
    <string name="detailReport">Show cost of bonsai care and bonsai status.</string>

    <!--    ratio icon-->
    <string name="ratioIconBonsai">47:50</string>
    <string name="ratioIconPlacement">36.75:50</string>
    <string name="ratioIconSupplies">51.25:50</string>
    <string name="ratioIconReport">34.52:50</string>

    <!--    setting-->
    <string name="maxBonsaiPerPlacement">Max of bonsai per placement</string>
    <string name="maxBonsaiPerPlacementShort">Max bonsai:</string>
    <string name="maxMoneyPerSupply">Max of money per supply</string>
    <string name="maxMoneyPerSupplyShort">Max supply:</string>

    <!--    requestCode-->
    <string name="scheduleAddRequestCode">1</string>

    <!--    putExtra-->
    <string name="putExtraManageTitle">manageTitle</string>
    <string name="putExtraSettingTitle">settingTitle</string>
    <string name="putExtraManageLoadList">putExtraManageLoadList</string>
    <string name="putExtraManageShowIcon">putExtraManageShowIcon</string>

    <!--    default data-->
    <string name="defaultPlacementBalcony">Balcony</string>
    <string name="defaultPlacementWindow">Window</string>
    <string name="defaultPlacementGate">Gate</string>

    <!--    new bonsai-->
    <string name="bonsaiName">Name:</string>
    <string name="bonsaiType">Type:</string>
    <string name="bonsaiPlace">Place:</string>
    <string name="bonsaiDayPlanted">Day Planted:</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>

    <!--    format-->
    <string name="dateFormat">MM - dd - yyyy</string>

    <string-array name="dropdownBonsaiType">
        <item>Need Light</item>
        <item>Need Shade</item>
    </string-array>

    <string name="supplyNameWater">Water</string>
    <string name="supplyNameNitrogenFertilizer">Nitrogen fertilizer</string>

    <integer name="ADD_REQUEST_CODE">1</integer>
    <string name="toastAddFail">Add Fail!</string>
    <string name="toastEditFail">Edit Fail!</string>
    <string name="toastDeleteFail">Delete Fail!</string>

    <string name="toastAddSuccess">Add Success!</string>
    <string name="toastEditSuccess">Edit Success!</string>
    <string name="toastDeleteSuccess">Delete Success!</string>


    <string name="editBonsaiTitle">Edit Bonsai</string>
    <string name="editPlaceTitle">Edit Place</string>
    <string name="editSupplyTitle">Edit Supply</string>

    <string name="putExtraBonsaiItemClick">putExtraBonsaiItemClick</string>

    <string name="nameError">Only letter, number, white space. No white space at first name and last name!</string>
    <string name="notEmptyPlaceError">Please remove all bonsai in this place before delete!</string>

    <string name="sharedPreferencesSetting">sharedPreferencesSetting</string>
    <string name="sharedPreferencesSettingMaxBonsai">sharedPreferencesSettingMaxBonsai</string>
    <string name="sharedPreferencesSettingMaxMoney">sharedPreferencesSettingMaxMoney</string>
    <string name="sharedPreferencesSettingShowAllCompleteSchedule">sharedPreferencesSettingShowAllCompleteSchedule</string>

    <string name="preErrorText">Move bonsai in "</string>
    <string name="postErrorText">before change.</string>
    <string name="notifyErrorMaxMoney">Money has to bigger than 0.</string>
    <string name="notifyErrorSupplyBought">Supply bought has to bigger than 0.</string>
    <string name="notifyErrorSupplyBiggerBought">Amount is bigger than total supply.</string>

    <string name="inputHandleMaxBonsai">Please enter a number.</string>
    <string name="inputHandleMaxMoney">Please enter a number.</string>
    <string name="newSupplyUnit">Unit:</string>
    <string name="newSupplyName">Name:</string>
</resources>
