<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activity.manage.NewBonsaiActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_layout_new_bonsai"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorBackground"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="50dp"
            android:layout_height="0dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="30dp"
            android:paddingTop="18dp"
            android:paddingBottom="18dp"
            android:src="@drawable/ic_left"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDetailSettingTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:text="@string/addNewBonsai"
            android:textColor="@color/colorItemTitle"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_BonsaiName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/constraint_layout_ripple"
        android:clickable="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_layout_new_bonsai">

        <TextView
            android:id="@+id/txtBonsaiNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonsaiName"
            android:textColor="@color/colorItemTitle"
            android:textSize="@dimen/settingTitleSize"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtBonsaiName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="Enter Bonsai Name"
            android:textColorHint="@color/colorHint"
            android:textColor="@color/colorItemTitle"
            android:maxLines="1"
            android:maxLength="24"
            android:layout_marginLeft="6dp"
            android:backgroundTint="@color/colorHint"
            android:background="@null"
            app:layout_constraintTop_toTopOf="@id/txtBonsaiNameTitle"
            app:layout_constraintBottom_toBottomOf="@id/txtBonsaiNameTitle"
            app:layout_constraintRight_toRightOf="@id/frame_BonsaiName"
            app:layout_constraintLeft_toRightOf="@id/txtBonsaiNameTitle"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_BonsaiType"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/constraint_layout_ripple"
        android:clickable="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_BonsaiName">

        <TextView
            android:id="@+id/txtBonsaiTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonsaiType"
            android:textColor="@color/colorItemTitle"
            android:textSize="@dimen/settingTitleSize"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spBonsaiType"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/txtBonsaiTypeTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_BonsaiPlace"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/constraint_layout_ripple"
        android:clickable="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_BonsaiType">

        <TextView
            android:id="@+id/txtBonsaiPlaceTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonsaiPlace"
            android:textColor="@color/colorItemTitle"
            android:textSize="@dimen/settingTitleSize"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/spBonsaiPlace"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/txtBonsaiPlaceTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame_BonsaiDayPlanted"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/constraint_layout_ripple"
        android:clickable="false"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_BonsaiPlace">

        <TextView
            android:id="@+id/txtBonsaiDayPlantedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bonsaiDayPlanted"
            android:textColor="@color/colorItemTitle"
            android:textSize="@dimen/settingTitleSize"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtBonsaiDayPlanted"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="today"
            android:textSize="@dimen/settingTitleSize"
            android:gravity="center_vertical"
            android:layout_marginLeft="6dp"
            android:textColor="@color/colorItemTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/txtBonsaiDayPlantedTitle"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnAddNewBonsaiSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="15dp"
        android:text="@string/submit"
        android:clickable="true"
        android:textSize="@dimen/buttonTextSize"
        android:textColor="@color/colorItemTitle"
        android:background="@drawable/button_ripple"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frame_BonsaiDayPlanted"/>

</androidx.constraintlayout.widget.ConstraintLayout>